tidied forms and looks and feel

--- a/views/add.pug
+++ b/views/add.pug
@@ -197,7 +197,7 @@ block content
             div.form-row
               div.form-row.col-md-10
                 div.col
-                  button.btn.btn-block.btn-primary(type='submit' href="/add/" + booking._id ) 
+                  button.btn.btn-block.btn-success(type='submit' href="/add/" + booking._id ) 
                     i.fa.fa-plus-square(aria-hidden=true)
                     span  Save  
                 div.col
