--- a/views/agenda.pug
+++ b/views/agenda.pug
@@ -29,7 +29,7 @@ block content
           div.d-flex.justify-content-start
             span.h2.badge.badge-success.mr-2.text-white()= dayName 
               div
-                span.small()= doc.tourDate 
+                span()= doc.tourDate 
             h4.d-flex.align-self-center.text-uppercase()= doc.firstName + ' ' + doc.lastName
             a.h3.badge.badge-success.text-white.ml-2.align-self-center=  'x ' + doc.pax
           div.d-flex.flex-row
