--- a/views/edit.pug
+++ b/views/edit.pug
@@ -180,7 +180,7 @@ block content
             div.form-row
               div.form-row.col-md-10
                 div.col
-                  button.btn.btn-block.btn-primary(type='submit' href="/edit/" + booking._id ) 
+                  button.btn.btn-block.btn-success(type='submit' href="/edit/" + booking._id ) 
                     i.fa.fa-plus-square(aria-hidden=true)
                     span  Update   
                 div.col
