--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,7 @@
 /* @import url("https://fonts.googleapis.com/css?family=Raleway:800|Merriweather+Sans|Share+Tech+Mono");
- */:root {
+ */
+
+:root {
   --logo-font: "Share Tech Mono", monospace;
   --header-font: "Raleway", sans-serif;
   --core-font: "Merriweather Sans", sans-serif;
@@ -118,15 +120,6 @@ a:hover {
   line-height: 1.5em;
 }
 
-.NavButtons {
-  display: flex;
-  width: 100%;
-  justify-content: space-around;
-  align-items: center;
-  padding: 0 20px;
-  margin: 0px auto;
-}
-
 .NavButton {
   display: flex;
   justify-content: center;
@@ -141,11 +134,6 @@ a:hover {
   box-shadow: var(--ui-shawdow);
 }
 
-.NavButtons a {
-  padding: 5px 10px;
-  color: #f2f2f2;
-}
-
 .view {
   background-color: #ffffff;
 }
@@ -155,11 +143,6 @@ a:hover {
   background-size: cover;
 }
 
-.calendar, .dash {
-  background-color: white
-}
-
-;
 .DashView {
   background: url("userBk.jpg") left bottom;
   background-size: cover;
@@ -177,148 +160,93 @@ a:hover {
   padding: 15px;
 }
 
-div.header {
-  background-color: #334a39;
+div.navBar {
+  background-color: #034f2f;
 }
 
+div.header {}
+
 nav.navbar {
-  background-color: #334a39;
   padding: 0;
 }
 
-.topnav {
-  overflow: hidden;
-  background-color: #333;
+nav.navbar-nav a:link, nav.navbar-nav a:active, nav.navbar-nav a:visited {
+  color: #ffffff;
 }
 
-.topnav a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 13px;
-}
-
-.topnav a:hover {
-  background-color: #ddd;
+nav.navbar-nav a:hover {
   color: black;
 }
 
-.topnav a.active {
-  background-color: #4CAF50;
-  color: white;
+.navbar-toggler {
+  border-color: rgba(70, 147, 42, )
 }
-
-.topnav .icon {
-  display: none;
-}
-
-.navbar-brand {
-  margin: 0;
-  padding: 0;
-}
-
-@media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {
-    display: none;
+  /* table column hover stuff */
+  table {
+    overflow: hidden;
   }
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .topnav.responsive {
-    position: relative;
-  }
-  .topnav.responsive .icon {
-    position: absolute;
-    right: 0px;
-    top: 0px;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-}
-
-/* table column hover stuff */
-
-table {
-  overflow: hidden;
-}
-
-tr:hover {
-  /*   background-color: var(--secondary);
+  tr:hover {
+    /*   background-color: var(--secondary);
    color: white !important;
 */
-}
-
-tr:hover {
-  background-color: #f2f2f2/* var(--secondary) */
-  ;
-  text-decoration: underline;
-  /* color: white !important; */
-}
-
-td, th {
-  position: relative;
-}
-
-td:hover::after, th:hover::after {
-  content: "";
-  position: absolute;
-  background-color: #ffa;
-  left: 0;
-  top: -5000px;
-  height: 10000px;
-  width: 100%;
-  z-index: -1;
-}
-
-.card {
-  background-color: #444;
-  border: 0 solid #28a745;
-  color: white;
-}
-
-.card-header {
-  padding: 0.75rem 1.25rem;
-  margin-bottom: 0;
-  background-color: #203125;
-  border-bottom: 1px solid #28a745;
-  color: white;
-}
-
-div.userDetailsBar {
-  font-size: 0.8rem;
-  background-color: #203125;
-  color: white;
-  border-bottom: solid #28a745 1px
-}
-
-.editOption {
-  width: 90%;
-  height: 24px;
-  position: relative;
-  top: -30px
-}
-
-#allList>div {
-  padding: 0 0.25em;
-}
-
-div.addBooking form#addForm label {
-  margin-bottom: 0;
-  font-style: italic;
-  color: lightgray;
-  font-size: .7em;
-}
-
-.form-group {
-  margin-bottom: .25rem;
-}
+  }
+  tr:hover {
+    background-color: #f2f2f2/* var(--secondary) */
+    ;
+    text-decoration: underline;
+    /* color: white !important; */
+  }
+  td, th {
+    position: relative;
+  }
+  td:hover::after, th:hover::after {
+    content: "";
+    position: absolute;
+    background-color: #ffa;
+    left: 0;
+    top: -5000px;
+    height: 10000px;
+    width: 100%;
+    z-index: -1;
+  }
+  .card {
+    background-color: #444;
+    border: 0 solid #28a745;
+    color: white;
+  }
+  .card-header {
+    padding: 0.75rem 1.25rem;
+    margin-bottom: 0;
+    background-color: #203125;
+    border-bottom: 1px solid #28a745;
+    color: white;
+  }
+  div.userDetailsBar {
+    color: white;
+    border-bottom: solid #28a745 1px
+  }
+  div.userDetailsBar, div.userDetailsBar a:link, div.userDetailsBar a:active, div.userDetailsBar a:visited {
+    color: rgb(139, 139, 139);
+  }
+  div.userDetailsBar a:hover, div.userDetailsBar a:focus {
+    color: #28a745;
+  }
+  .editOption {
+    width: 90%;
+    height: 24px;
+    position: relative;
+    top: -30px
+  }
+  #allList>div {
+    padding: 0 0.25em;
+  }
+  div.addBooking form#addForm label {
+    margin-bottom: 0;
+    font-style: italic;
+    color: lightgray;
+    font-size: .7em;
+  }
+  .form-group {
+    margin-bottom: .25rem;
+  }
+  @media screen and (max-width: 600px) {}
